--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <h1>Blog Vista</h1>
         </div>
     </div>
+    <a href="index.html">
+    <img src="Images/logo1.png" id="logo" height="60px" width="60px">
+</a>
     </header>
 
     <nav>
