--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Blog</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Blog Vista</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -17,8 +17,8 @@
         <h1>Blog Vista</h1>
         </div>
     </div>
-    <a href="index.html">
-    <img src="Images/logo1.png" id="logo" height="60px" width="60px">
+    <a href="index.html" class="logo">
+    <img src="Images/logo1.png" height="60px" width="60px">
 </a>
     </header>
 
@@ -68,9 +68,9 @@
     <footer>
         &copy; 2024 Blog Vista. All rights reserved.<br>
         
-        <a href="https://www.instagram.com/">Instagram</a><br>
-        <a href="https://www.facebook.com/">Facebook</a><br>
-        <a href="https://twitter.com/">Twitter</a>
+        <a href="https://www.instagram.com/" class="social">Instagram</a><br>
+        <a href="https://www.facebook.com/" class="social">Facebook</a><br>
+        <a href="https://twitter.com/" class="social">Twitter</a>
         
     </footer>
 
